@@ -1,0 +1,3 @@
+# sample document
+
+This is a sample document in markdown
