@@ -1,0 +1,4 @@
+sample document
+===============
+
+This is a sample document in reST
