@@ -64,6 +64,7 @@ Bugs fixed
 * #2561: Info builder crashes when a footnote contains a link
 * #2565: The descriptions of objects generated by ``sphinx.ext.autosummary`` overflow lines at LaTeX writer
 * Extend pdflatex config in sphinx.sty to subparagraphs (ref: #2551)
+* #2445: `rst_prolog` and `rst_epilog` affect to non reST sources
 
 
 Release 1.4.1 (released Apr 12, 2016)
